<resources>
    <string name="app_name">NotesApp</string>
    <string name="title_spiice">Spiice</string>
    <string name="account_login_query">You have an Account ? <b>Log-in</b></string>
    <string name="text_main_button">Discover the platform</string>
    <string name="title_signup">Sign-up</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_signup_button">Sign-up</string>
    <string name="title_login">Log-in</string>
    <string name="text_login_button">Log-in</string>
    <string name="return_to_signup_query">Return to Sign-up</string>
    <string name="logout_navigation_button"><![CDATA[<- Logout]]></string>
    <string name="add_new_navigation_button">Add new</string>
    <string name="back_navigation_button"><![CDATA[<- Back]]></string>
    <string name="title_add_note">Add note</string>
    <string name="title_all_notes">All notes</string>
    <string name="hint_title">Title</string>
    <string name="hint_message">Message</string>
    <string name="text_add_button">Add</string>
    <string name="error_not_empty">cannot be empty</string>
    <string name="error_common">error</string>
    <string name="hint_date">Date</string>
    <string name="check_box_text">Select date</string>
    <string name="skip">Skip</string>
    <string name="onboarding_step1_text">Find projects from companies everywhere in the word</string>
    <string name="onboarding_step2_text">Work hard and level up!</string>
    <string name="onboarding_step3_text">Enjoy your progess!</string>
    <string name="profile">Profile</string>
    <string name="name_surname">Name Surname</string>
    <string name="delete_profile">Delete profile</string>
    <string name="num_notes">[num] notes</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
</resources>