<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/dp_100"
        android:text="@string/title_signup"
        style="@style/TitleStyle" />

    <LinearLayout
        android:layout_width="@dimen/dp_320"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/dp_200"
        android:orientation="vertical">


        <EditText
            android:id="@+id/signup_first_name"
            android:layout_gravity="center|top"
            android:hint="@string/hint_first_name"
            style="@style/EditFieldStyle" />

        <EditText
            android:id="@+id/signup_last_name"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/hint_last_name"
            style="@style/EditFieldStyle"/>

        <EditText
            android:id="@+id/signup_email"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/hint_email"
            style="@style/EditFieldStyle"/>

        <EditText
            android:id="@+id/signup_password"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/hint_password"
            style="@style/EditFieldStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/dp_60"
        android:orientation="vertical">

        <Button
            android:id="@+id/signup_button"
            android:text="@string/text_signup_button"
            android:layout_gravity="center|bottom"
            style="@style/ButtonMainStyle" />


        <TextView
            android:id="@+id/signup_query"
            android:layout_margin="@dimen/dp_40"
            android:layout_gravity="center|top"
            android:text="@string/account_login_query"
            style="@style/TextQueryClickStyle" />

    </LinearLayout>

</FrameLayout>