<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile">

    <TextView
        android:id="@+id/title_profile"
        style="@style/TitleStyle"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_surname"
        style="@style/ProfileNameStyle"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/name_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_profile"/>

    <TextView
        android:id="@+id/delete_profile"
        style="@style/ProfileDeleteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:text="@string/delete_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/name_surname" />


    <TextView
        android:id="@+id/notes_profile"
        style="@style/ProfileNotesStyle"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_36"
        android:text="@string/num_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_surname"/>

    <TextView
        android:id="@+id/delete_notes"
        style="@style/ProfileDeleteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:text="@string/delete_all_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/notes_profile" />

    <TextView
        android:id="@+id/logout"
        style="@style/ProfileLogoutStyle"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_36"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_profile"/>




</androidx.constraintlayout.widget.ConstraintLayout>