<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/dp_200"
        android:text="@string/title_spiice"
        style="@style/TitleMainStyle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/dp_60"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_button"
            android:text="@string/text_main_button"
            android:layout_gravity="center|bottom"
            style="@style/ButtonMainStyle" />


        <TextView
            android:id="@+id/main_query"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/dp_40"
            android:text="@string/account_login_query"
            style="@style/TextQueryClickStyle" />

    </LinearLayout>>

</FrameLayout>